# eh-tagger

./: .gitignore  Cargo.toml  eh-tagger.rs
data/: singleitem.json  test-tagdata.json  test-tagschema.yaml  testdata.json
lib/: lib.rs  tag_entry.rs
lib/datafile/: entry_data_file.rs  mod.rs  tag_file.rs  tag_schema_file.rs
lib/types/: entry_data_types.rs  file_types.rs  mod.rs  tag_types.rs
tests/: test_data_file.rs  test_tag_entry.rs  test_tag_file.rs  test_tag_schema_file.rs  test_tagupdate.rs
