[package]
name="eh-tagger"
version="0.0.0"
edition="2018"

[lib]
name="eh_tagger"
path="lib/lib.rs"

[[bin]]
name="eh-tagger"
path="eh-tagger.rs"

[dependencies]
rocket="0.4.7"
rocket_contrib={version="0.4.7",features=["json"]}

serde={version="1.0.125",features=["derive"]}
serde_json="1.0.64"
serde_yaml="0.8.17"

# tests
[[bin]]
name="testdatafile"
path="tests/test_data_file.rs"